--- a/server/static/dev/css/base.styl
+++ b/server/static/dev/css/base.styl
@@ -8,10 +8,23 @@ global-reset()
   appearance: none
   
 
+@font-face 
+  font-family: circular-black
+  src: url("../font/circular-black.ttf")
+  
+  
+@font-face 
+  font-family: circular-bold
+  src: url("../font/circular-bold.ttf")
+  
+
 html, body
   width:100%
- 
-
+  font-family: circular-bold
+  
+.strong
+  font-family: circular-black
+  
 .hidden
   display: none 
 
@@ -27,6 +40,12 @@ img
   background-color: #fafafa
   
 nav.nav-bar
+  line-height: 60px
   height: 60px
   margin-bottom: 30px
   border-bottom: 1px solid #cccccc
+  h1
+    margin: auto
+    text-align: center
+    font-size: 25px
+
