--- a/ios/BulletTime/Base.lproj/Shoot.storyboard
+++ b/ios/BulletTime/Base.lproj/Shoot.storyboard
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="iI3-dU-lul">
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
@@ -16,7 +17,6 @@
             <string>Circular-Black</string>
         </mutableArray>
         <mutableArray key="lineto-circular-bold.ttf">
-            <string>Circular-Bold</string>
             <string>Circular-Bold</string>
             <string>Circular-Bold</string>
         </mutableArray>
@@ -44,7 +44,7 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rCW-aw-lIz">
                                 <rect key="frame" x="0.0" y="378" width="320" height="190"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="to control the shutter for everyone" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dYA-2z-3Vg">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="to control the shutter for everyone" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dYA-2z-3Vg">
                                         <rect key="frame" x="20" y="57" width="280" height="18"/>
                                         <fontDescription key="fontDescription" name="Circular-Bold" family="Circular" pointSize="14"/>
                                         <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
@@ -65,7 +65,7 @@
                                             <action selector="buttonHostPressed:" destination="sen-Tm-IzU" eventType="touchUpInside" id="Zhx-hc-ywv"/>
                                         </connections>
                                     </button>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Are you the host?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7bA-lj-n7j">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Are you the host?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7bA-lj-n7j">
                                         <rect key="frame" x="20" y="20" width="224" height="35"/>
                                         <fontDescription key="fontDescription" name="Circular-Black" family="Circular" pointSize="27"/>
                                         <nil key="highlightedColor"/>
@@ -579,16 +579,6 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ixY-sD-eS9">
                                 <rect key="frame" x="0.0" y="124" width="320" height="320"/>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3Ld-0C-OZH">
-                                <rect key="frame" x="90" y="474" width="141" height="31"/>
-                                <fontDescription key="fontDescription" name="Circular-Bold" family="Circular" pointSize="15"/>
-                                <state key="normal" title="Toggle host preview">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="buttonHidePreviewPressed:" destination="fps-vk-6Hi" eventType="touchUpInside" id="z8S-80-28F"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -601,10 +591,8 @@
                             <constraint firstItem="eFK-c2-EXo" firstAttribute="leading" secondItem="6fv-03-gd8" secondAttribute="leading" id="Q7h-nV-Ru3"/>
                             <constraint firstAttribute="trailing" secondItem="l7t-hU-yFV" secondAttribute="trailing" constant="5" id="Rvh-AO-ErO"/>
                             <constraint firstItem="ixY-sD-eS9" firstAttribute="bottom" secondItem="eFK-c2-EXo" secondAttribute="bottom" id="UCG-21-Vdm"/>
-                            <constraint firstItem="3Ld-0C-OZH" firstAttribute="centerX" secondItem="6fv-03-gd8" secondAttribute="centerX" id="WB7-GM-f3k"/>
                             <constraint firstItem="ixY-sD-eS9" firstAttribute="top" secondItem="eFK-c2-EXo" secondAttribute="top" id="WkK-da-lPf"/>
                             <constraint firstItem="eFK-c2-EXo" firstAttribute="width" secondItem="eFK-c2-EXo" secondAttribute="height" multiplier="1:1" id="bgi-va-uCo"/>
-                            <constraint firstItem="3Ld-0C-OZH" firstAttribute="top" secondItem="ixY-sD-eS9" secondAttribute="bottom" constant="30" id="osi-mL-qWK"/>
                             <constraint firstAttribute="trailing" secondItem="eFK-c2-EXo" secondAttribute="trailing" id="pJG-dI-TTi"/>
                             <constraint firstItem="yKh-dB-XqV" firstAttribute="leading" secondItem="6fv-03-gd8" secondAttribute="leading" id="rAb-IV-aNL"/>
                         </constraints>
