--- a/ios/BulletTime/Base.lproj/Shoot.storyboard
+++ b/ios/BulletTime/Base.lproj/Shoot.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="iI3-dU-lul">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="iI3-dU-lul">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -644,29 +644,21 @@
                                     <action selector="back:" destination="fps-vk-6Hi" eventType="touchUpInside" id="VLI-Q7-2rD"/>
                                 </connections>
                             </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ixY-sD-eS9">
-                                <rect key="frame" x="0.0" y="124" width="320" height="320"/>
-                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="ixY-sD-eS9" firstAttribute="trailing" secondItem="eFK-c2-EXo" secondAttribute="trailing" id="1RU-NM-LgE"/>
                             <constraint firstItem="l7t-hU-yFV" firstAttribute="centerY" secondItem="yKh-dB-XqV" secondAttribute="centerY" id="7fN-WK-Q1i"/>
-                            <constraint firstItem="ixY-sD-eS9" firstAttribute="leading" secondItem="eFK-c2-EXo" secondAttribute="leading" id="DpB-E9-L5I"/>
                             <constraint firstItem="yKh-dB-XqV" firstAttribute="top" secondItem="6fv-03-gd8" secondAttribute="top" constant="15" id="E7Q-oL-IjH"/>
                             <constraint firstAttribute="trailing" secondItem="yKh-dB-XqV" secondAttribute="trailing" id="MUm-aG-bEJ"/>
                             <constraint firstItem="eFK-c2-EXo" firstAttribute="centerY" secondItem="6fv-03-gd8" secondAttribute="centerY" id="OFS-Xh-EHe"/>
                             <constraint firstItem="eFK-c2-EXo" firstAttribute="leading" secondItem="6fv-03-gd8" secondAttribute="leading" id="Q7h-nV-Ru3"/>
                             <constraint firstAttribute="trailing" secondItem="l7t-hU-yFV" secondAttribute="trailing" constant="5" id="Rvh-AO-ErO"/>
-                            <constraint firstItem="ixY-sD-eS9" firstAttribute="bottom" secondItem="eFK-c2-EXo" secondAttribute="bottom" id="UCG-21-Vdm"/>
-                            <constraint firstItem="ixY-sD-eS9" firstAttribute="top" secondItem="eFK-c2-EXo" secondAttribute="top" id="WkK-da-lPf"/>
                             <constraint firstItem="eFK-c2-EXo" firstAttribute="width" secondItem="eFK-c2-EXo" secondAttribute="height" multiplier="1:1" id="bgi-va-uCo"/>
                             <constraint firstAttribute="trailing" secondItem="eFK-c2-EXo" secondAttribute="trailing" id="pJG-dI-TTi"/>
                             <constraint firstItem="yKh-dB-XqV" firstAttribute="leading" secondItem="6fv-03-gd8" secondAttribute="leading" id="rAb-IV-aNL"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="centralPreviewView" destination="ixY-sD-eS9" id="M75-gd-Z9f"/>
                         <outlet property="sharedView" destination="yKh-dB-XqV" id="wFk-Xj-Zjf"/>
                     </connections>
                 </viewController>
